--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-      <div class="pricing-col col-lg-4 col-md-6">
+      <div class="pricing-col col-lg-4">
         <div class="card">
           <div class="card-header">
             <h3 class="card-title">Chihuahua</h3>
@@ -167,7 +167,7 @@
           </div>
         </div>
       </div>
-      <div class="pricing-col col-lg-4 col-md-6">
+      <div class="pricing-col col-lg-4">
         <div class="card">
           <div class="card-header">
             <h3 class="card-title">Labrador</h3>
